--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,8 +11,11 @@
         <item>Television</item>
         <item>Internet</item>
         <item>Memes</item>
-        <item>Presidential</item>
-        <item>STDs</item>
+        <item>Politics</item>
+        <item>General</item>
+        <item>Current Events</item>
+        <item>Economics</item>
+        <item>Actors</item>
         <item>Games</item>
         <item>Playstation</item>
         <item>Food</item>
